--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -2,6 +2,6 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/bots-dev-5428/protocol', '.']
 options:
-  machineType: 'N1_HIGHCPU_8'
+  machineType: 'E2_HIGHCPU_32'
 timeout: 3600s
 images: ['gcr.io/bots-dev-5428/protocol']
