--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -44,8 +44,7 @@
     "decimal.js": "^10.3.1",
     "highland": "^2.13.5",
     "immer": "^9.0.7",
-    "lodash-es": "^4.17.21",
-    "nanoid": "^3.1.30"
+    "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
     "@eth-optimism/contracts": "^0.5.5",
